# sentence-bumper

./: README.md  pyproject.toml
sentence_bumper/: __main__.py
tests/: test_sentence_bumper.py
