[tool.poetry]
name = "sentence-bumper"
version = "0.1.0"
description = ""
authors = ["lightyears1998 <lightyears1998@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
